[package]
name = "rss_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.6.20", features = ["headers"]}
feed-rs = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
